--- a/.editorconfig
+++ b/.editorconfig
@@ -1,3 +1,8 @@
+;
+; File managed by ModuleSync - Do Not Edit
+;
+; Additional Makefiles can be added to `.sync.yml` in 'Makefile.includes'
+;
 ; This file is for unifying the coding style for different editors and IDEs.
 ; More information at https://editorconfig.org
 
@@ -9,7 +14,7 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{y*ml,*json}]
+[*.{y*ml,*json*,*sonnet}]
 indent_style = space
 indent_size = 2
 
@@ -24,7 +29,3 @@ insert_final_newline = false
 
 [Makefile]
 indent_style = tab
-
-# Don't check for trailing newlines in golden tests output
-[tests/golden/**]
-insert_final_newline = unset
