--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+#
+# File managed by ModuleSync - Do Not Edit
+#
+# Additional entries can be added to `.sync.yml` in '.gitignore.additionalEntries'
+#
+
 # Commodore
 .cache/
 helmcharts/
@@ -6,6 +12,10 @@ vendor/
 jsonnetfile.lock.json
 crds/
 compiled/
+
+# Editors
+.vscode/
+.idea/
 
 # Antora
 _archive/
