--- a/renovate.json
+++ b/renovate.json
@@ -1,8 +1,6 @@
 {
   "extends": [
-    "config:base",
-    ":gitSignOff",
-    ":disableDependencyDashboard"
+    "config:base"
   ],
   "labels": [
     "dependency"
