--- a/class/openshift4-s3-forwarder.yml
+++ b/class/openshift4-s3-forwarder.yml
@@ -8,4 +8,4 @@ parameters:
       - input_paths:
           - openshift4-s3-forwarder/component/main.jsonnet
         input_type: jsonnet
-        output_path: openshift4-s3-forwarder/
+        output_path: openshift4-s3-forwarder/${_instance}/
