--- a/.editorconfig
+++ b/.editorconfig
@@ -1,8 +1,3 @@
-;
-; File managed by ModuleSync - Do Not Edit
-;
-; Additional Makefiles can be added to `.sync.yml` in 'Makefile.includes'
-;
 ; This file is for unifying the coding style for different editors and IDEs.
 ; More information at https://editorconfig.org
 
@@ -11,9 +6,10 @@ root = true
 [*]
 charset = utf-8
 end_of_line = lf
+insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{y*ml,*json*,*sonnet}]
+[*.{y*ml,*json}]
 indent_style = space
 indent_size = 2
 
@@ -28,3 +24,10 @@ insert_final_newline = false
 
 [Makefile]
 indent_style = tab
+
+; Ignore golden test outputs
+[tests/golden/**]
+indent_size = unset
+indent_style = unset
+insert_final_newline = unset
+trim_trailing_whitespace = unset
