Update from template
Template version: main (`f12cbb4`)

--- a/class/defaults.yml
+++ b/class/defaults.yml
@@ -2,6 +2,7 @@ parameters:
   openshift4_s3_forwarder:
     =_metadata:
       multi_instance: true
+      multi_tenant: true
     namespace: openshift-logging
 
     images:
