--- a/class/openshift4-s3-forwarder.yml
+++ b/class/openshift4-s3-forwarder.yml
@@ -4,7 +4,7 @@ parameters:
       - input_paths:
           - openshift4-s3-forwarder/component/app.jsonnet
         input_type: jsonnet
-        output_path: apps/
+        output_path: .
       - input_paths:
           - openshift4-s3-forwarder/component/main.jsonnet
         input_type: jsonnet
